# generated at Sat Jun 15 22:01:53 2019 using merge.py
# format: flowerpot-1 (azalea)
# specs: https://del.dog/flowerpot
$1
# NEWS_AND_MAGAZINES
com.globo.g1.app
se.aftonbladet.start
se.svt.svti.android.nyhetsapp
fi.iltasanomat
com.foxnews.android
com.google.android.apps.magazines
org.detikcom.rss
fi.iltalehti.iltalehti
jp.gocro.smartnews.android
nl.sanomamedia.android.nu
ch.iagentur.epaper.derlandbote
de.fcms.webapp.tagblatt
ch.sonntagszeitung.ePaper
com.phonegap.tagesanzeiger
com.rtklive.rtk
ch.nzz.mobile
ch.iomedia.arcinfo
tk.shkabaj.android.shkabaj
ch.jleuleu.teletext
ch.iAgentur.i20Min
ch.rts.rtsinfo
fm.castbox.audiobook.radio.podcast
ch.polizei_schweiz.app
de.spiegel.android.app.spon
ch.derbund.app
com.microsoft.amp.apps.bingnews
ch.iagentur.epaper.tagesanzeiger
ch.tio.androidv2.app
ch.iomedia.lenouvelliste
ch.bernerzeitung.app
com.medium.reader
ch.srf.mobile
ch.nzz.fm1
ch.blick.news
it.dshare.android.blick
com.edipresse.lematin.ch
com.nlsavenger.africablast.gemslegend
ch.perron2.teletext
ch.vqheures.ePaper
ch.iagentur.i12app
com.iart.chromecastapps
com.mobilesrepublic.appy
de.fcms.webapp.luzernerzeitung
com.bambuna.podcastaddict
samsungupdate.com
ch.tagblatt.epaper
bbc.mobile.news.ww
ch.iAgentur.i20MinFr
com.twitter.android
ch.vsdruck.eversify.buku
de.axelspringer.yapa
ch.tamedia.fuw
com.reddit.frontpage
ch.nau.app
ch.luzernerzeitung.epaper
ch.fixxpunkt.watson
ch.swisscom.bluewin
flipboard.app
de.chip.ultimate
com.handelsblatt.live
com.lemonde.morning
ch.berneroberlaender.app
com.nytimes.android
ch.lematindimanche.ePaper
ch.iomedia.lacote
com.bewoopi.launcher.heures
ch.thunertagblatt.app
com.iagentur.derlandbote
com.bauermedia.de.epaper.autozeitung
com.lemonde.androidapp
com.bloomberg.android.plus
com.ideashower.readitlater.pro
ch.ringier.gluckspost.android
com.lesinrocks.ipad
com.iagentur.zurichseezeitung
de.autobild.autobild
com.stripes
com.bewoopi.launcher.tdg
com.dailymail.online
com.washingtonpost.rainbow
ch.letemps
ch.azmedien.az_app_zofingen