@@ -1,0 +1,271 @@
+# generated at Sun Jun 16 11:56:57 2019 using merge.py
+# format: flowerpot-1 (azalea)
+# specs: https://del.dog/flowerpot
+$1
+# STATIC TEMPLATE
+# isGame manifest flag
+&isGame
+# appCategory set to CATEGORY_GAME
+&category|game
+# GAME
+com.androbros.puzzle2048eng
+com.outfit7.tomsjetski
+air.com.hypah.io.slither
+com.fingersoft.makemore
+com.bethsoft.falloutshelter
+com.aa.generaladaptiveapps
+com.sweatychair.lastofhumanity
+jpark.AOS5
+com.secondarm.taptapdash
+com.mochibits.google.leftvsright
+com.eightyeightgames.tenmillion
+jp.co.translimit.braindots
+net.fishlabs.gof2hdallandroid2012
+com.glu.deerhunt16
+com.aquiris.horizonchase
+com.kongregate.mobile.thetrail.google
+com.epacegames.zombiemobile
+air.au.com.minimega.bonza
+com.playdemic.golf.android
+com.Latour.Maestria
+com.tapblaze.pizzabusiness
+com.gamehouse.hm3gp
+com.veewo.supercat
+com.ea.game.starwarscapital_row
+com.playgendary.pinatamasters
+com.tljtek.casino
+com.supercell.clashroyale
+com.word.journey.crossword.de
+com.wetpalm.GeoChallenge
+com.asmolgam.europe
+com.bethsoft.falloutcompanionapp
+com.nixhydragames.thearcana
+com.hypebits.android.thriller
+com.pixelberrystudios.choices
+de.eoa.srtl.toggospiele
+com.gm_shaber.story
+net.isitlove.cartercorp.ryan
+net.isitlove.cartercorp.gabriel
+com.GF.apcguscn.hwyad.google
+com.glu.nickiminaj
+air.MSPMobile
+com.ubisoft.colparis
+com.zephyo.LivePortraitMaker
+de.blueocean.bibitina.grossespferdeturnier
+co.uk.flamefalcon.hillcliffhorse
+com.eduweb.wolfquest
+com.HahnFilm.MiaAndMe.FreeTheUnicorns
+com.FoxieGames.HorseRidingTales
+com.upjers.zoo2animalpark
+air.com.moviestarplanet.boonieverse
+fr.two4tea.fightlist
+com.d3p.mpq
+com.nexon.devcat.marvelbattlelines
+com.disney.WMW
+com.disney.mirage_goo
+com.disney.castleofillusion_goo
+com.disney.docmcstuffinsbaby_goo
+com.disney.starwarspuzzledroids_goo
+org.prowl.wintersunrpg
+rs.aparteko.slagalica.android
+com.linecorp.LGBB2
+com.playstation.gtsport
+com.bungieinc.bungiemobile
+abdelrahman.impossibletest
+abdelrahman.hangmangame2
+abdelrahman.impossibletest2
+abdelrahman.finddifferencegamear
+com.panda.nesgames
+com.pixelstar.DNPHVIP
+com.and.games505.TerrariaPaid
+com.tellurionmobile.realmcraft
+com.sandboxol.indiegame.skywar
+com.sandboxol.indiegame.jailbreak
+com.murka.scatterholdem
+com.igg.android.mobileroyale
+com.goodgamestudios.bigfarmmobileharvest
+com.lilithgame.roc.gp
+com.dts.freefireth
+com.mobile.legends
+com.ea.gp.fifamobile
+com.pjmasks.timetobeahero
+com.roblox.client
+com.gismart.realdrum2free
+com.eyu.piano
+easy.drum.set.free.finger.drums.kit
+com.gismart.guitar
+com.entabridge.chatnovel3en
+com.voltage.g.hykoi.en
+com.voltage.joshige.tenka.en
+net.isitlove.mysteryspell.sebastian
+com.Love.Story.Games.Teenage.Drama
+com.Cheritz.MysticMessenger
+pampam.ibf2
+com.europosit.pixelcoloring
+com.pixel.art.coloring.color.number
+com.easybrain.chamy
+de.woodiehoo.homeandfriends
+de.toggolino.club.app
+com.superrtl.supertoyclub.toggo
+com.budgestudios.CaillouSearchAndCount
+com.playmobil.hospital
+com.chickenegg.dotlol
+com.wordcross.plus.puzzle.de
+com.retrobox.magician2
+co.singta.sidstory
+jp.ne.ambition.googleplay_nizikano2d_glb
+com.ubj.zwfzgp
+com.twistygames.animalrescue
+com.catdaddy.mynba2k19
+se.foglo.tmh
+com.scopely.whiplash
+com.reliancegames.wwemayhem
+com.parrot.freeflight
+com.gi.talkinggummybear
+com.gi.talkinggarfield
+com.outfit7.mytalkinghank
+br.com.tapps.donotdisturb3
+com.fingerstudios.solitaire.classic
+com.ct2018
+com.magjg.roundhit
+com.gmail.bulupe.Scale
+com.swingman.game
+com.mnightt.slices
+com.mgc.runnergame
+com.suji.spinner
+com.colorup.game
+com.rubygames.idledestruction
+com.colorhole.game
+com.popreach.dumbways
+com.kwalee.drawit
+com.matteljv.uno
+com.JindoBlu.Antistress
+com.taplane.logoquizm
+com.ketchapp.screamhero
+com.tellmewow.senior.pastime
+com.colorjoy.Learn.to.draw.glow.princess
+com.gameone.colorhockey.free
+com.creative.draw.finger.spinner
+com.astragon.cs2014
+se.feomedia.quizkampen.de.premium
+com.zerorockent.replica
+com.lego
+com.mtvn.llamaspit
+com.lego.nexoknights.merlok
+com.mtvn.tmntpp
+com.wb.goog.lnjgo
+com.turner.kickahead
+com.arqew.bgc
+com.shareddreams.twelveminibattles
+com.bitmango.go.stringart
+com.twoplayergamesfree.twoplayergames
+jj.app.cyf
+com.ction.playergames
+com.bigduckgames.flow
+com.puzzlegame.puzzledom
+com.leodesol.games.classic.maze.labyrinth
+com.funlab.hangmanturkish
+com.funlab.wordsearchall
+com.funlab.wordpuzzle
+com.funlab.bubblepoke
+com.funlab.hangmanportuguese
+com.funlab.hangman
+com.funlab.hangmanspanish
+com.ferrero.magickinder.tablet
+com.moose.shopville
+com.turner.powerpuffyourself
+com.outfit7.mytalkingtomfree
+com.outfit7.tomsbubbles
+com.outfit7.talkingtom
+com.ea.gp.fifaultimate
+de.softan.brainstorm
+com.lin.duo.english.mobile
+com.orange.coloring.learn.kids
+com.budgestudios.BarbieMagicalFashion
+com.budgestudios.HelloKittyNailSalon
+com.ffgames.blockyracer
+com.badcrane.rgbexpress
+se.shadowtree.software.trafficbuilder
+com.droidhen.car3d
+nl.squla.unitab
+com.jimbop.letmeout
+com.geishatokyo.trafficrun
+com.appynation.puzzlepage
+jp.co.translimit.brainwars
+com.casox.Popsmachine
+com.rikudo.numbers
+com.pescapps.gamekids2free
+com.miniklerogreniyor.gamepack
+com.gamesforkids.numbers123.tracing
+com.sinyee.babybus.babyhospital
+com.tribeplay.pandarestaurant2
+com.tribeplay.pandaairport
+com.tocaboca.tocalifeworld
+com.tocaboca.tocakitchen2
+com.PepiPlay.PepiShopping
+com.tocaboca.tocaboo
+com.teachyourmonstertoread.tmapp
+mytown.beach
+mytown.beautycontest.free
+biz.arrowstar.funnyfood2
+com.binibambini.MiniLite
+com.sunny.coloring.book.kids.paint
+com.EducaGames.MathLand
+com.sesameworkshop.elmoloves123s
+com.sirnic.atomas
+com.noodlecake.reallybadchess
+com.twoseventy.game
+com.extra.androary.solitaire
+com.superandroix
+de.joergjahnke.mobilesudoku
+com.solvus_lab.android.slagalica
+com.pubggrandmafia.gtathugchicago30
+com.inpoly.lowpoly.polyart.puzzle
+com.inapp.cross.stitch
+com.love.poly.puzzle.game
+com.ally.griddlersplus
+com.rawrmaan.falcross
+com.gst.sandbox
+air.com.ooblada.riddlestones
+com.inertiasoftware.crossstitchworld
+com.microids.universal.TheWallMHFree
+com.asmodeedigital.carcassonne
+com.crowdstar.covetHome
+com.marketluck.bravoloto
+com.dotemu.titanquest
+com.ankama.krosmaga
+com.stainlessgames.D15
+com.teknasyon.coloringbook
+com.katsu.doomwheel
+com.gameloft.android.ANMP.GloftPOHM
+com.appgame7.friutslegend
+jp.co.ofcr.cm00
+com.cookapps.beagles.magic.cat.piano.tiles
+com.cmplay.dancingline
+com.youmusic.magictiles
+com.amanotes.pamamagictwist
+com.amanotes.pamadancingroad
+com.amanotes.pamahelixtiles
+com.gismart.realpianofree
+com.percent.mybest
+com.nama.pianosongbook
+com.kauf.soundboard.baum.FartSoundBoard
+com.kauf.princessgamesalonangela3d
+com.kauf.babygamesbabsygirl3dfun
+com.kauf.talking.babygamesforkids
+com.playgendary.ktb2
+com.percent.mybest3
+com.ketchapp.penrun
+com.seyeonsoft.pastel
+air.com.imaios.AnatomyNinjaLowerLimb
+com.kimjisub.launchpad
+com.wow.number
+com.plane.tycoon
+com.heavyraid.vacationdiscount
+com.kingformation.PlayWordSudoku
+pt.cosmicode.guessup
+com.candywriter.bitlife
+com.seriousfactory.rTruckEco
+com.seriousfactory.rTruckSim
+com.plus9.fandogh
+phil.pool.zp
