@@ -12,13 +12,14 @@ Flowerpot files are built as a line delimited list of rules. Except for metadata
 
 ### Supported rules
 
-| Identifier | Rule           | Description                  | Notes                                                   |
-|:----------:|----------------|------------------------------|---------------------------------------------------------|
-|            | Package        | Package name filter          | Version 1 only supports full package names as filter    |
-|     `#`    | Comment        | Comment                      |                                                         |
-|     `$`    | Version        | Version tag (integer)        | Must be the first non-comment item, can only occur once |
-|     `:`    | IntentAction   | Intent action to filter by   |                                                         |
-|     `;`    | IntentCategory | Intent category to filter by | Tested in combination with the `DEFAULT` action         |
+| Identifier | Rule             | Description                         | Notes                                                   |
+|:----------:|------------------|-------------------------------------|---------------------------------------------------------|
+|            | Package          | Package name filter                 | Version 1 only supports full package names as filter    |
+|     `#`    | Comment          | Comment                             |                                                         |
+|     `$`    | Version          | Version tag (integer)               | Must be the first non-comment item, can only occur once |
+|     `:`    | IntentAction     | Intent action to filter by          |                                                         |
+|     `;`    | IntentCategory   | Intent category to filter by        | Tested in combination with the `DEFAULT` action         |
+|     `&`    | CodeRule         | Rule which has been defined in code | Accepts arguments seperated by `|`                      |
 
 ### File names
 
