@@ -1,0 +1,2 @@
+&category|audio
+&category|video
