@@ -1,0 +1,3 @@
+&category|social
+# Some social apps which weren't scraped
+com.twitter.android
