@@ -18,16 +18,19 @@
 package ch.deletescape.lawnchair.flowerpot
 
 import android.content.Context
+import android.content.Intent
 import android.os.Process
 import android.os.UserHandle
+import ch.deletescape.lawnchair.flowerpot.rules.CodeRule
 import ch.deletescape.lawnchair.flowerpot.rules.Rule
 import com.android.launcher3.compat.LauncherAppsCompat
 import com.android.launcher3.shortcuts.ShortcutInfoCompat
 import com.android.launcher3.util.ComponentKey
 
-class FlowerpotApps(context: Context, private val pot: Flowerpot) : LauncherAppsCompat.OnAppsChangedCallbackCompat {
+class FlowerpotApps(private val context: Context, private val pot: Flowerpot) : LauncherAppsCompat.OnAppsChangedCallbackCompat {
 
     private val launcherApps = LauncherAppsCompat.getInstance(context)
+    private val intentMatches = mutableSetOf<String>()
     val matches = mutableSetOf<ComponentKey>()
 
     init {
@@ -37,9 +40,28 @@ class FlowerpotApps(context: Context, private val pot: Flowerpot) : LauncherApps
 
     private fun filterApps() {
         matches.clear()
+        intentMatches.clear()
+        for (rule in pot.rules.filterIsInstance<Rule.IntentCategory>()) {
+            context.packageManager.queryIntentActivities(Intent().addCategory(rule.category), 0).forEach {
+                intentMatches.add(it.activityInfo.packageName)
+            }
+        }
+        for (rule in pot.rules.filterIsInstance<Rule.IntentAction>()) {
+            context.packageManager.queryIntentActivities(Intent(rule.action), 0).forEach {
+                intentMatches.add(it.activityInfo.packageName)
+            }
+        }
         launcherApps.getActivityList(null, Process.myUserHandle()).forEach {
-            if (pot.rules.contains(Rule.Package(it.componentName.packageName))) {
+            if (intentMatches.contains(it.componentName.packageName)
+                    || pot.rules.contains(Rule.Package(it.componentName.packageName))) {
                 matches.add(ComponentKey(it.componentName, it.user))
+            } else {
+                for (rule in pot.rules.filterIsInstance<Rule.CodeRule>()) {
+                    if (CodeRule.get(rule.rule, *rule.args).matches(it.applicationInfo)) {
+                        matches.add(ComponentKey(it.componentName, it.user))
+                        break
+                    }
+                }
             }
         }
     }
